--- a/frontend/app/index.pug
+++ b/frontend/app/index.pug
@@ -4,5 +4,99 @@ html(lang="en")
         meta(charset="UTF-8")
         title="online-tic-tac-toe"
         script(src="app.js")
+        // Latest compiled and minified CSS
+        link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
     body
-        h1 Hi mate, I'm a test HTML file, rendered from Pug template
+        // top bar
+        nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
+            .navbar-header
+                div.navbar-brand Online tic-tac-toe
+
+            p.navbar-text Implemented by zhukovsd
+            p.navbar-text
+                a(href="https://github.com/zhukovsd/online-tic-tac-toe", style="margin-left: 0px; margin-top: 15px; text-decoration: none;")
+                    i.fa.fa-github(style="margin-right: 3px;")
+                    span Github sources
+
+            //ul.nav.navbar-nav.navbar-right(style="margin-right: 10px;")
+            //    li
+            //        div.navbar-text Signed in as Sergey Zhukov
+            //    li
+            //        button(type="button").btn.btn-sm.navbar-btn.btn-default Log out
+            button(type="button").btn.btn-sm.navbar-btn.btn-default.navbar-right(style="margin-right: 10px;") Log out
+            div.navbar-text.navbar-right(style="margin-right: 10px;") Signed in as Sergey Zhukov
+
+        // main content
+        div.container.main-container(style="display: flex; flex-flow: row;")
+            div.content-container.well(style="flex: 3;")
+                h3.text-center Currently played games
+                div.style(style="display: flex; flex-wrap: wrap; width: 750px; margin-left: auto; margin-right: auto;")
+                    each val in [1, 2, 3, 4, 5]
+                        div(style="width: 230px; height: 260px; margin: 10px")
+                            div(style="width: 230px; height: 230px; display: flex; flex-wrap: wrap;")
+                                each val1 in [1,2,3,4,5,6,7,8,9]
+                                    if Math.random() < 0.15
+                                        div.tic-tac-toe-cell.checked.player-1
+                                    else if Math.random() < 0.30
+                                        div.tic-tac-toe-cell.checked.player-2
+                                    else
+                                        div.tic-tac-toe-cell.player-1
+                            div.text-center player 1 vs player 2
+
+            div.content-container.well(style="flex: 1; margin-left: 18px;")
+                button(type="button").btn.btn-primary.text-center(style="width: 100%;") Find game
+
+                hr(style="border-color: darkgrey;")
+                div
+                    h4 Currently online
+                    div 3 players, 10 bots
+
+                hr(style="border-color: darkgrey;")
+                h4 Your statistics
+                ul.leaders
+                    li
+                        span Wins
+                        span 5
+                    li
+                        span Loses
+                        span 6
+                    li
+                        span Draws
+                        span 7
+
+                hr(style="border-color: darkgrey;")
+                h4 Top players
+                ul.leaders
+                    each val in [1, 2, 3, 4, 5]
+                        li
+                            span= val + '. Player ' + val
+                            span 10/1/1
+
+                hr(style="border-color: darkgrey;")
+                h4 Server statistics
+                ul
+                    li 251 games played
+                    li 11 unique players authorized
+                //div.panel.panel-default
+                //    div.panel-heading Panel heading without title
+                //    div.panel-body Panel content
+
+
+
+        //nav.navbar.navbar-fixed-bottom
+        //    // (style="padding-right: 0;")
+        //    div.container.well
+        //        form.form-inline
+        //            button(type="button").btn.btn-primary.pull-right(style="margin-right: 10px;") New game
+        //
+        //            div.pull-right(style="margin-right: 10px; margin-top: 5px;")
+        //                label.radio-inline
+        //                    input(type="radio", name="inlineRadioOptions", value="option1")
+        //                    | 3x3
+        //                label.radio-inline
+        //                    input(type="radio", name="inlineRadioOptions", value="option2")
+        //                    | 5x5
+
+            //div.content-align-container
+                //div.content-container
+            //div.bottom-controls
